syntax = "proto3";

package api.ledger;

option go_package = "github.com/meshtrade/api/go/ledger";

/*
Network represents the various blockchain networks supported by Mesh.
NOTE: numbering NOT TO BE UPDATED to be sequential without an associated migration!!!!
*/
enum Network {
  UNDEFINED_NETWORK = 0;
  STELLAR_NETWORK = 3;
  BITCOIN_NETWORK = 5;
  LITECOIN_NETWORK = 7;
  ETHEREUM_NETWORK = 9;
  RIPPLE_NETWORK = 11;
  SA_STOCK_BROKERS_NETWORK = 15;
  NULL_NETWORK = 16;
}